2011-02-28  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/Makefile: Call R and Rscript relative to R_HOME/bin

2010-12-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Initial release 0.9.0

2010-12-17  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/classic/classic.h: Add copyMessageToR() declaration

2010-12-05  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/RcppClassic.Rnw: Aligned with the Rcpp vignettes

2010-12-02  Romain Francois <romain@r-enthusiasts.com>

	* Create new package for deprecated 'classic Rcpp' API by carving it
	out of the current Rcpp package